# pt-jax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: demo.py  example_numpyro.py  spike_and_slab.py
src/pt_jax/: __init__.py  _types.py  annealing.py  deo.py  kernels.py  numpyro.py
tests/: test_kernels.py
