[project]
name = "pt-jax"
version = "0.1.0"
description = "Minimal implementation of parallel tempering in JAX."
readme = "README.md"
authors = [
    { name = "Paweł Czyż", email = "pczyz@protonmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jax>=0.5.3",
    "jaxlib>=0.5.3",
    "jaxtyping>=0.3.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupytext>=1.17.0",
    "numpy>=2.2.4",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]


[tool.ruff]
# See https://github.com/google/jaxtyping/blob/main/FAQ.md
# to see why we disabled F722 (or when you see F821)
ignore = ["F722", "F821"]


[tool.jupytext]
formats = "ipynb,py:percent"
